--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "@vueup/vue-quill": "^1.0.0-beta.8",
+        "primeicons": "^5.0.0",
+        "primevue": "^3.12.6",
+        "quill": "^1.3.6",
+        "quill-blot-formatter": "^1.0.5",
         "vue-select": "^4.0.0-beta.3",
         "vue3-treeselect": "^0.1.10"
     }
